$Id: ChangeLog,v 1.368 2007/03/08 16:56:50 freckle Exp $

2007-03-08  Matthias Ringwald <mringwal@inf.ethz.ch>
    * arch/avr/dev/usartavr.c: moved Exit Tracer event to end of IRQ
 
2007-02-15  Harald Kipp  <harald.kipp@egnite.de>

	* os/version.c: Beta release 4.3.1.

	* net/tcpsm.c: Serious bug in the TCP state machine froze socket
	connection on 32-bit platforms.

	* arch/arm/dev/at91_emac.c, conf/arch/arm.nut: Configurable buffer 
	usage and link timeout.

	* arch/arm/dev/hd44780_at91.c, conf/arch/arm.nut: Port usage is 
	now configurable. Data bits no longer need four consecutive port bits. 
	Added delays in read for better reliability with some slow displays.

	* arch/arm/dev/st7036_at91.c, include/dev/st7036.h, conf/arch/arm.nut:
	Added support for ST7036 based displays. Tested with EA DOG-M LCDs.

	* conf/arch/arm.nut, include/arch/arm/at91sam7x.h, 
	include/arch/arm/at91sam9260.h, arch/arm/dev/ih_at91sys.c,
	include/arch/arm/irqreg.h: Support for system controller interrupts 
	added.

	* arch/arm/dev/ostimer_at91.c, include/arch/arm/at91_pit.h,
	conf/arch/arch.nut, conf/arch/arm.nut, conf/at91sam7x-ek.conf, 
	include/arch/arm/at91sam7x.h: Now the periodic interrupt timer 
	may be used for the system clock.

	* conf/dev/dev.nut, conf/ethernut30e.conf, conf/ethernut30d.conf, 
	dev/twbbif.c, include/cfg/twi.h: Configurable port bits for 
	bit-banging I2C. Should work now on all AT91 MCUs. Make sure to 
	update your configuration file.

	* arch/arm/init/crtat91sam7x256_rom.S, conf/arch/arm.nut,
	arch/arm/init/crtat91sam9260_ram.S: Configurable runtime 
	initialization.

	* arch/avr/dev/usart0avr.c, arch/avr/dev/usart1avr.c: PORTG
	was rejected for half duplex control. Thanks to Andreas Siebert.

	* conf/repository.nut: PIO ID list added.

	* include/arch/arm/at91_ssc.h: Wrong SSC clock broke external clock
	feeding. Fixed.

	* tools/nutconf/mainframe.cpp, tools/nutconf/nutcomponent.c,
	tools/nutconf/nutconf.h, tools/nutconf/nutconf.cpp,